--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "typescript-mvc-consumer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug-gulp": "iron-node node_modules/gulp/bin/gulp.js"
@@ -19,36 +18,24 @@
   },
   "homepage": "https://github.com/Davste93/typescript-mvc-consumer",
   "devDependencies": {
-    "amd-optimize": "^0.6.1",
-    "bower": "^1.7.7",
-    "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
-    "concat": "^1.0.0",
-    "glob": "^7.0.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^4.3.2",
+    "del": "^2.2.0",
+   "gulp-babel": "^5.3.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-connect": "^3.1.0",
+    "gulp-remember": "^0.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-typescript": "^2.12.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-usemin": "^0.3.21",
-    "gulp-wiredep": "0.0.0",
-    "inversify": "^1.3.1",
-    "json-server": "^0.8.8",
-    "rimraf": "^2.5.2",
-    "superstatic": "^4.0.2",
-    "tsify": "^0.13.2",
-    "tslint": "^3.5.0",
-    "tsmvc": "^1.0.9",
-    "typescript": "^1.8.2",
-    "uglify": "^0.1.5",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "walk-sync": "^0.2.6",
-    "wiredep": "^3.0.0"
+    "gulp-watch": "^4.3.5",
+    "merge2": "^1.0.1",
+    "minimist": "^1.2.0",
+    "path": "^0.12.7",
+    "run-sequence": "^1.1.5",
+    "through2": "^2.0.1",
+    "yargs": "^4.2.0"
   },
   "dependencies": {
     "bower-requirejs": "^1.2.0",
+    "gulp-json-srv": "^0.1.1",
     "tsmvc": "^1.0.20"
   }
 }
